--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@stoplight/spectral-functions": "^1.10.1",
     "@stoplight/spectral-parsers": "^1.0.5",
     "@stoplight/spectral-rulesets": "^1.22.0",
+    "@stoplight/types": "^14.1.1",
     "@uiw/react-codemirror": "^4.23.12",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
@@ -52,5 +53,6 @@
     "typescript-eslint": "^8.32.1",
     "vite": "^6.3.4",
     "vitest": "^3.1.2"
-  }
+  },
+  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
